# swagger/swagger.yml
@@ -3132,6 +3132,11 @@ paths:
         description: OAuth code
         required: true
         type: string
+      - in: query
+        name: redirect_uri
+        description: Exact redirect URI from the authorization request
+        required: true
+        type: string
       responses:
         "200":
           description: The Response object
